Parse external json data. Show item descriptions.

--- a/index.html
+++ b/index.html
@@ -145,6 +145,10 @@
             <hr />
             <button class="apply">Применить</button>
         </div>
+
+        <div id="description">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam error illum maiores maxime modi, mollitia natus, nulla sed soluta suscipit tempora veniam. A ad architecto esse excepturi molestias perspiciatis quisquam!
+        </div>
     </div>
 
     <div id="wheel-data-sets">
