--- a/index.html
+++ b/index.html
@@ -146,9 +146,7 @@
             <button class="apply">Применить</button>
         </div>
 
-        <div id="description">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam error illum maiores maxime modi, mollitia natus, nulla sed soluta suscipit tempora veniam. A ad architecto esse excepturi molestias perspiciatis quisquam!
-        </div>
+        <div id="description"></div>
     </div>
 
     <div id="wheel-data-sets">
@@ -156,13 +154,7 @@
 
         <div>
             <input type="radio" id="items" name="list" value="items" autocomplete="off" />
-            <label for="items">Предметы</label><!--
-            no spaces
-        --></div>
-
-        <div>
-            <input type="radio" id="events" name="list" value="events" autocomplete="off" />
-            <label for="events">События</label><!--
+            <label for="items">Предметы/события</label><!--
             no spaces
         --></div>
 
