Use internal wheel

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <script src="whopg2-wheel/js/util.js"></script>
     <script src="whopg2-wheel/js/FPSCounter.js"></script>
     <script src="whopg2-wheel/js/GifPlayer.js"></script>
-    <script src="whopg2-wheel/js/WheelSketch.js"></script>
+    <script src="js/WheelSketch.js"></script>
     <script src="whopg2-wheel/js/Video.js"></script>
     <script src="whopg2-wheel/js/CheckboxStateable.js"></script>
     <script src="data.js"></script>
