Refferency items and definitions

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Колесо GGG (Genre Game Gauntlet)</title>
+    <title>Колесо RSGG (Refferency Steam Game Gauntlet)</title>
 
     <link rel="stylesheet" href="whopg2-wheel/css/index.css">
     <link rel="stylesheet" href="css/index.css">
@@ -154,7 +154,7 @@
 
         <div>
             <input type="radio" id="items" name="list" value="items" autocomplete="off" />
-            <label for="items">Предметы/события</label><!--
+            <label for="items">Колесо Приколов</label><!--
             no spaces
         --></div>
 
@@ -164,19 +164,9 @@
             no spaces
         --></div>
 
-        <div>
-            <input type="radio" id="scrooge" name="list" value="custom" autocomplete="off" />
-            <label for="scrooge">Свой список</label>
-        </div>
-
-        <a id="rules" href="rules">Таблица Genre Game Gauntlet</a>
+        <a id="rules" href="rules">Таблица Refferency Steam Game Gauntlet</a>
 
         <div class="break"></div>
-
-        <div>
-            <input id="volume-control" type="range" step="0.05" value="0.5" max="1" min="0" title="Громкость видео" />
-            <input id="with-dmca" type="checkbox" /><label for="with-dmca">Воспроизводить DMCA-треки</label>
-        </div>
 
         <div>
 <!--            <a id="sources"-->
