--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
 
         <div id="custom-list" class="dialog">
-            <div class="header">Свой список</div>
+            <div class="header"></div>
             <textarea rows="15" cols="50"></textarea>
             <hr />
             <button>Применить</button>
@@ -164,9 +164,19 @@
             no spaces
         --></div>
 
+        <div class="hide">
+            <input type="radio" id="scrooge" name="list" value="custom" autocomplete="off" />
+            <label for="scrooge">Свой список</label>
+        </div>
+
         <a id="rules" href="rules">Таблица Refferency Steam Game Gauntlet</a>
 
         <div class="break"></div>
+
+        <div class="hide">
+            <input id="volume-control" type="range" step="0.05" value="0.5" max="1" min="0" title="Громкость видео" />
+            <input id="with-dmca" type="checkbox" /><label for="with-dmca">Воспроизводить DMCA-треки</label>
+        </div>
 
         <div>
 <!--            <a id="sources"-->
