--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Колесо RSGG (reffsggerency Steam Game Gauntlet)</title>
+    <title>Колесо RSGG</title>
 
     <link rel="stylesheet" href="reffsgg-wheel/css/index.css">
     <link rel="stylesheet" href="css/index.css">
@@ -169,7 +169,7 @@
             <label for="scrooge">Свой список</label>
         </div>
 
-        <a id="rules" href="rules">Таблица reffsggerency Steam Game Gauntlet</a>
+        <a id="rules" href="rules">Таблица Refferency Steam Game Gauntlet</a>
 
         <div class="break"></div>
 
