--- a/reffsgg-wheel/index.html
+++ b/reffsgg-wheel/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Колесо WhoPG 2</title>
+    <title>Колесо RSGG</title>
 
     <link rel="stylesheet" href="css/index.css">
 </head>
