Unnecessary elements hide

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             no spaces
         --></div>
 
-        <div class="hide">
+        <div style="display: none;>
             <input type="radio" id="scrooge" name="list" value="custom" autocomplete="off" />
             <label for="scrooge">Свой список</label>
         </div>
@@ -173,7 +173,7 @@
 
         <div class="break"></div>
 
-        <div class="hide">
+        <div style="display: none;>
             <input id="volume-control" type="range" step="0.05" value="0.5" max="1" min="0" title="Громкость видео" />
             <input id="with-dmca" type="checkbox" /><label for="with-dmca">Воспроизводить DMCA-треки</label>
         </div>
