--- a/index.html
+++ b/index.html
@@ -164,18 +164,18 @@
             no spaces
         --></div>
 
-        <div>
+        <div style="display: none;">
             <input type="radio" id="scrooge" name="list" value="custom" autocomplete="off" />
             <label for="scrooge">Свой список</label>
         </div>
 
-        <a id="rules" href="rules">Таблица Genre Game Gauntlet</a>
+        <a id="rules" href="rules">Таблица Refferency Steam Game Gauntlet</a>
 
         <div class="break"></div>
 
         <div>
             <input id="volume-control" type="range" step="0.05" value="0.5" max="1" min="0" title="Громкость видео" />
-            <input id="with-dmca" type="checkbox" /><label for="with-dmca">Воспроизводить DMCA-треки</label>
+            <input id="with-dmca" type="checkbox" style="display: none;" /><label for="with-dmca" style="display: none;">Воспроизводить DMCA-треки</label>
         </div>
 
         <div>
