Rules to reffrules

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <label for="scrooge">Свой список</label>
         </div>
 
-        <a style="padding-right: 32px;" id="rules" href="rules">Правила RSGG</a>
+        <a style="padding-right: 32px;" id="reffrules" href="reffrules">Правила RSGG</a>
 
         <a style="padding-right: 32px;" id="lots" href="lots">Пункты Колеса Приколов</a>
 
