--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
         <button id="btn-edit" title="Редактировать список" class="hide"></button>
 
         <div>
-            <input type="radio" id="items" name="list" value="items" autocomplete="off" checked />
+            <input type="radio" id="items" name="list" value="items" autocomplete="off" />
             <label for="items">Колесо Приколов</label><!--
             no spaces
         --></div>
 
         <div>
-            <input type="radio" id="louie" name="list" value="coin" autocomplete="off" />
+            <input type="radio" id="louie" name="list" value="coin" autocomplete="off" checked />
             <label for="louie">Монетка</label><!--
             no spaces
         --></div>
